# Trading_Algo

./: .gitignore  README.md  requirements.txt
trading_bot/: .env.example  README.md  pyproject.toml
trading_bot/config/: config.example.yaml  symbols.example.yaml
trading_bot/scripts/: doctor.py  export_trades_csv.py  reset_paper_account_state.py  run_bot.py
trading_bot/src/trading_bot/: main.py
trading_bot/src/trading_bot/connectors/: base.py  future_connectors_stub.py  mt5_connector.py
trading_bot/src/trading_bot/core/: config.py  constants.py  exceptions.py  timeframes.py  utils.py
trading_bot/src/trading_bot/data/: candles.py  features.py  pipeline.py
trading_bot/src/trading_bot/engine/: bot_engine.py  scheduler.py  state.py
trading_bot/src/trading_bot/execution/: executor.py  idempotency.py  models.py  retry.py
trading_bot/src/trading_bot/indicators/: adx.py  atr.py  moving_averages.py  rsi.py  two_pole_oscillator.py
trading_bot/src/trading_bot/monitoring/: heartbeat.py  network.py  resources.py  temperatures.py
trading_bot/src/trading_bot/notifications/: telegram.py  templates.py  throttle.py
trading_bot/src/trading_bot/persistence/: db.py  migrations.py  models.py  repos.py
trading_bot/src/trading_bot/ranking/: correlation.py  normalizer.py  ranker.py  scorer.py
trading_bot/src/trading_bot/risk/: limits.py  models.py  risk_manager.py  sizing.py  sltp.py
trading_bot/systemd/: trading-bot.service.example
trading_bot/tests/: test_idempotency.py  test_indicators.py  test_mt5_connector_init.py  test_ranking.py  test_risk.py
(+9 files in other folders)
