[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Production-style MT5 demo/paper trading bot with TUI, persistence, risk controls, and notifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "MetaTrader5>=5.0.45",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "psutil>=5.9",
  "requests>=2.31",
  "rich>=13.7",
  "textual>=0.58",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "error::DeprecationWarning:trading_bot.*",
  "ignore::DeprecationWarning:pandas.*",
]

